# pican

./: .gitignore  Cargo.toml  README.md
crates/pican_asm/: Cargo.toml  build.rs
crates/pican_asm/src/: context.rs  float24.rs  from_pir.rs  instrs.rs  ir.rs  lib.rs  lower.rs  shbin.rs
crates/pican_asm/src/shbin/: instruction.rs  mod.rs
crates/pican_core/: Cargo.toml
crates/pican_core/src/: alloc.rs  context.rs  copy_arrayvec.rs  diagnostics.rs  ir.rs  lib.rs  ops.rs  properties.rs  register.rs  span.rs
crates/pican_frontend/: Cargo.toml
crates/pican_frontend/src/: ast.rs  lib.rs  lower.rs  parse.rs
crates/pican_pir/: Cargo.toml
crates/pican_pir/macros/: Cargo.toml
crates/pican_pir/src/: bindings.rs  ir.rs  ty.rs
crates/pican_ty/: Cargo.toml
crates/pican_ty/src/: check.rs  context.rs  lib.rs  ops.rs  ty.rs
exes/pican_check/: .gitignore  Cargo.toml
exes/pican_check/src/: args.rs  main.rs
exes/pican_disam/: Cargo.toml
exes/pican_disam/src/: main.rs
picanc/: Cargo.toml
picanc/src/: args.rs  main.rs
src/: context.rs  copy_arrayvec.rs  ir.rs  lib.rs  main.rs  ops.rs  register.rs
src/asm/: context.rs  float24.rs  from_pir.rs  instrs.rs  ir.rs  lower.rs  mod.rs
src/asm/shbin/: instruction.rs  mod.rs
src/frontend/: ast.rs  lower.rs  mod.rs  parse.rs  parse_ext.rs
src/pir/: bindings.rs  ir.rs  mod.rs  ops.rs  ty.rs
src/ty/: check.rs  context.rs  mod.rs  ops.rs  ty.rs
test_cases/: .gitignore  Cargo.toml  build.rs
test_cases/inputs/: alias_swizzle.pica  alias_swizzle_carry_through.pica  alias_swizzle_no_second.pica  alias_to_constant.pica  all_constant.pica  all_uniform_types.pica  basic-uniform.pica  basic_alias.pica  basic_constant.pica  basic_constant_ordering.pica  basic_ifc.pica  basic_index_uniform.pica  basic_output_bindings.pica  basic_rsq.pica  cmp_basic.pica  complex-mesh-shader.pica  compose_multi_swizzle_alias.pica  const_fa.pica  dp3_compress_opdesc.pica  ifc_else.pica  in_binding.pica  just-comment.pica  main_with_spaces.pica  mul_compress_with_mov.pica  neg_starter.pica  nested_if.pica  nested_ifc_then_op.pica  no_dvle.pica  non_fitting_constant.pica  op_with_1swiz.pica  op_with_swizzle.pica  op_with_swizzle_and_offset.pica  opcode_optimisation_add.pica  opdesc_compress.pica  output_bind.pica  simple-main.pica  simple_mad.pica  simple_negation_mov.pica  with-comments.pica  with_spaces.pica
test_cases/src/: all_programs_compile.rs  lib.rs  picasso_conformance.rs  picasso_roundtrips.rs
test_cases/tycheck_fail/: mov_to_input.pica
