[package]
name = "pican"
version = "0.1.0"
edition = "2021"
authors = ["0x00002a"]
description = "A rust toolchain for the PICA200"
license = "MIT"


[workspace]
members = ["exes/*", "test_cases"]
resolver = "2"


[dependencies]
binrw = "0.13.3"
bumpalo = { version = "3.15.4", features = ["collections"] }
codespan = { version = "0.11.1", features = ["serialization"] }
codespan-reporting = "0.11.1"
copy_arrayvec = { version = "0.1.0", features = ["serde"] }
indexmap = { version = "2.2.6", features = ["serde"] }
modular-bitfield = "0.11.2"
nom = "7.1.3"
nom_locate = "4.2.0"
paste = "1.0.14"
serde = { version = "1.0.197", features = ["derive"] }
string-interner = "0.14.0"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"
typesum = "0.2.0"

[dev-dependencies]
assert_matches = "1.5.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
