[package]
name = "test_cases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pican = { path = ".." }
codespan-reporting = "0.11.1"
binrw = "0.13.3"
pretty_assertions = "1.4.0"

[build-dependencies]
glob = "0.3.1"
quote = "1.0.35"
anyhow = "1.0.79"
