[package]
name = "pican_asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pican_core = { path = "../pican_core", version = "0.1.0" }
pican_pir = { path = "../pican_pir", version = "0.1.0" }
binrw = "0.13.3"

serde = { version = "1.0.195", features = ["derive"] }
typesum = "0.2.0"
