[package]
name = "pican_asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pican_core = { path = "../pican_core", version = "0.1.0" }
pican_pir = { path = "../pican_pir", version = "0.1.0" }
binrw = "0.13.3"
modular-bitfield = "0.11.2"
strum = { version = "0.25.0", features = ["derive"] }

serde = { version = "1.0.195", features = ["derive"] }
typesum = "0.2.0"
paste = "1.0.14"
string-interner = "0.14.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

[build-dependencies]
glob = "0.3.1"
anyhow = "1.0.79"

[features]
default = [ "picasso_match_tests"]
picasso_match_tests = []
