[package]
name = "pican_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.13.0", features = ["collections"] }
codespan = { version = "0.11.1", features = ["serde", "serialization"] }
serde = { version = "1.0.195", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.56"
